[package]
name = "reepicheep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.8.4"
rusqlite = "0.30.0"
dotenv = "0.15.0"
reqwest = {version="0.11.13", features = ["blocking", "json"]}